manifests/monitoring/ingress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - grafana.cropwise.garden
  gateways:
  - istio-ingress/istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
        port:
          number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - prometheus.cropwise.garden
  gateways:
  - istio-ingress/istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: kube-prometheus-stack-prometheus.monitoring.svc.cluster.local
        port:
          number: 9090
